# osoy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  makefile  osoy
aur/src/: .SRCINFO  PKGBUILD
src/: args.rs  auth.rs  cli.rs  config.rs  datadir.rs  exec.rs  gitutil.rs  lib.rs  link.rs  location.rs  main.rs  operate.rs  operator.rs  opt.rs  out.rs  output.rs  prompt.rs  query.rs  repo.rs  repos.rs  transfer.rs  util.rs
src/operator/: build.rs  cat.rs  clone.rs  completions.rs  dir.rs  execute.rs  fork.rs  link.rs  list.rs  locate.rs  make.rs  new.rs  prompt.rs  pull.rs  query.rs  relocate.rs  remove.rs  rename.rs  status.rs  symlink.rs  unlink.rs  update.rs
src/operator/query/: fsmeta.rs
src/query/: build.rs  exes.rs  status.rs
