[package]
name = "osoy"
version = "0.3.0"
authors = ["Emil Rasmus Merzin <rasmusmerzin@gmail.com>"]
edition = "2018"
description = "Command-line git repository manager"
repository = "https://github.com/osoy/osoy"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli"]

[dependencies]
git2 = "0.13"
regex = "1"
structopt = "0.3"
termion = "1.5"
